# file-declutter

./: CHANGES.md  Cargo.toml  LICENSE  README.md
.github/: env
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: cli.rs  execution.rs
tests/common/: mod.rs
