[package]
name = "file-declutter"
version = "0.1.0-SNAPSHOT"
edition = "2021"

authors = ["Florian Gamböck <mail@floga.de>"]
description = "Unconventional deduping method."
repository = "https://github.com/FloGa/crazy-deduper.git"
readme = "README.md"
categories = []
keywords = []
license = "MIT"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
lazy_static = "1.4.0"
predicates = "3.0.4"
rand = "0.8.5"
