[package]
name = "file-declutter"
version = "0.2.0-SNAPSHOT"
edition = "2024"

authors = ["Florian Gamböck <mail@floga.de>"]
description = "Reorganizes files into nested folders based on their filenames."
repository = "https://github.com/FloGa/file-declutter"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "file", "utility"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
lazy_static = "1.4.0"
predicates = "3.0.4"
rand = "0.9.2"
